--- a/index.html
+++ b/index.html
@@ -5,55 +5,79 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lovelies - Figma</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montaga&display=swap" rel="stylesheet" />
 </head>
 
 <body>
-  <section class="first">
-    <header>
-      <div class="logo">
-        <span><img src="img/Text.png" alt="" /></span>
-        <h2>Lovelies</h2>
+
+  <header>
+    <nav class="hh">
+      <div>
+        <img src="img/logo.png" alt="lovelies">
       </div>
-      <nav>
-        <button>Home</button>
-        <button>Our Story</button>
-      </nav>
-    </header>
 
-    <section class="container-ido">
-      <div class="i-do">
-        <h2>Saying "I Do" Under <br> the Tuscan Sun</h2>
-        <p> Please join us to celebrate our special day. <br />
-          Get ready for love,laughter and happily ever after.
-        </p>
-        <button>Read Our Story</button>
+      <div class="sec-ll">
+        <ul class="ll">
+          <li>Home</li>
+          <li>Our Story</li>
+        </ul>
       </div>
-      <div><img src="img/couple.jpeg" alt="pic of couple" class="couple" /></div>
-      </sectiom>
-    </section>
-  </section>
-  
-  <section class="second">
-    <h2>Our Story</h2>
-    <p>
-      Our love story began with a chance encounter, a blossoming connection
-      nurtured with care. Laughter echoed through our dates, our bond growing
-      stronger with each passing moment. <br> The future unfolded before us, a
-      canvas waiting to be painted with shared dreams. Together, we would face
-      challenges hand-in-hand, our love a guiding light. <br> This is just the
-      beginning of our grand adventure, a story waiting to be written.
-    </p>
-  </section>
+    </nav>
+  </header>
 
-  <div class="ring"><img src="img/ring.jpeg" alt="engagement ring" /></div>
+    <main>
 
-  <footer>
-    <p>Copyright <a href="https://hijoygirl.com/">@joygirl</a></p>
-  </footer>
+      <section class="section1">
+        <div>
+          <h1>Saying "I Do" Under the Tuscan Sun</h1>
+
+          <p>Please join us to celebrate our special day. <br />
+            Get ready for love,laughter and happily ever after.
+          </p>
+          
+          <button class="i-do">Read Our Story</button>
+        </div>
+
+        <div>
+          <img src="img/couple.png" alt="pic of couple">
+        </div>
+      </section>
+
+      <section class="section2">
+        <div class="story">
+          <h2>Our Story</h2>
+        </div>
+        <div class="d-story">
+          <p>Our love story began with a chance encounter, a blossoming connection
+            nurtured with care. Laughter echoed through our dates, our bond growing
+            stronger with each passing moment.
+          </p>
+          <p>The future unfolded before us, a
+            canvas waiting to be painted with shared dreams. Together, we would face
+            challenges hand-in-hand, our love a guiding light.
+          </p>
+          <p>This is just the
+            beginning of our grand adventure, a story waiting to be written.
+          </p>
+        </div>
+      </section>
+
+      <section>
+        <div class="ring">
+          <img src="img/ring.jpeg" alt="engagement ring">
+        </div>
+      </section>
+
+    </main>
+
+    <footer>
+      <div>
+        <p>Copyright <a href="https://hijoygirl.com/">@joygirl</a></p>
+      </div>
+    </footer>
 </body>
 
 </html>
