--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         <img src="img/logo.png" alt="lovelies">
       </div>
 
+      <div class="hamburger">
+        <img src="img/List.png" alt="hamburger">
+      </div>
+
       <div class="sec-ll">
         <ul class="ll">
           <li>Home</li>
@@ -31,7 +35,7 @@
     <main>
 
       <section class="section1">
-        <div>
+        <div class="first-part">
           <h1>Saying "I Do" Under the Tuscan Sun</h1>
 
           <p>Please join us to celebrate our special day. <br />
