--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="sec-ll">
         <ul class="ll">
           <li>Home</li>
-          <li>Our Story</li>
+          <li><a href="story.html">Our Story</a></li>
         </ul>
       </div>
     </nav>
