--- a/story.html
+++ b/story.html
@@ -80,7 +80,7 @@
 
     <section>
       <div class="ring">
-        <img src="img/ring.jpeg" alt="engagement ring">
+        <img src="img/ring.jpeg" alt="engagement ring.">
       </div>
     </section>
 
