--- a/story.html
+++ b/story.html
@@ -78,9 +78,45 @@
     </section>
     <div><img class="flower" src="img/flower.png" alt=""></div>
 
-    <section>
-      <div class="ring">
-        <img src="img/ring.jpeg" alt="engagement ring.">
+    <section class="last">
+      <div><img class="flower2" src="img/flower2.png" alt=""></div>
+      <h4>The Wedding Party</h4>
+      <div class="wed">
+        <div class="grooms">
+          <h2>Groomsmen</h2>
+          <div class="groom">
+            <div><img src="img/pic1.png" alt="">
+              <p>Collins</p>
+            </div>
+            <div><img src="img/pic2.png" alt="">
+              <p>James</p>
+            </div>
+            <div><img src="img/pic3.png" alt="">
+              <p>Tom</p>
+            </div>
+            <div><img src="img/pic4.png" alt="">
+              <p>Kal</p>
+            </div>
+          </div>
+        </div>
+        <div>
+          <h2>Bridesmaids</h2>
+          <div class="bride">
+            <div><img src="img/girl1.png" alt="">
+              <p>Lovett</p>
+            </div>
+            <div><img src="img/girl2.png" alt="">
+              <p>Daniella</p>
+            </div>
+            <div><img src="img/girl3.png" alt="">
+              <p>Happiness</p>
+            </div>
+            <div><img src="img/girl4.png" alt="">
+              <p>Queen</p>
+            </div>
+          </div>
+
+        </div>
       </div>
     </section>
 
