--- a/story.html
+++ b/story.html
@@ -54,20 +54,26 @@
       <div class="when">
         <h2>When</h2>
         <p>
-          The adventure deepens! On June 15th, 2024, Julia and I will tie the knot, pledging our love and embarking on a
+          The adventure deepens! On <span>June 15th, 2024</span>, Julia and I will tie the knot, pledging our love and embarking on a
           lifetime together. We can't wait to celebrate this special day with all of you!
         </p>
       </div>
       <div class="venue">
         <h2>Venue</h2>
-        <p>Join us as we celebrate our love and officially begin our adventure together at the beautiful Townhall in
-          Lekki Phase 1. We can't wait to share this special occasion with laughter, joy, and unforgettable memories!
+        <p>Join us as we celebrate our love and officially begin our adventure together at the beautiful <span>Townhall in
+          Lekki Phase 1.</span>. We can't wait to share this special occasion with laughter, joy, and unforgettable memories!
         </p>
+      </div>
+    </section>
+    
+    <section>
+      <div class="ring-story">
+        <img src="img/ring.jpeg" alt="">
       </div>
     </section>
 
     <section class="love-meet">
-      <div><img src="img/love-meet.png" alt=""></div>
+      <div><img class="river" src="img/love-meet.png" alt=""></div>
       <div class="meet">
         <h2>Where Love Meet</h2>
         <p>In whispered hopes and shared dreams we bloom,</p>
